--- a/configure and setup/双系统安装.md
+++ b/configure and setup/双系统安装.md
@@ -6,7 +6,7 @@ type: configure
 # Windows+Linux ubuntu双系统安装
 
 参考资料：https://www.cnblogs.com/xlpc/p/12324535.html
-#双系统 #Linux #Windows10
+/#双系统 #Linux #Windows10
 
 1. 清理磁盘空间(略)
    
@@ -16,7 +16,7 @@ type: configure
    发现BIOS模式为UEFI
 
 3. 压缩磁盘驱动器以创建一个新的盘符
-暂时分配40G空间（硬盘太小了！！！）不够到时候再整
+按照参考资料指示运行，暂时分配40G空间（硬盘太小了！！！）不够到时候再整
 
 4. 下载需要安装的系统镜像并制作U盘启动盘
 (这里直接用现成的启动盘)
