--- a/configure and setup/双系统安装.md
+++ b/configure and setup/双系统安装.md
@@ -6,7 +6,7 @@ type: configure
 # Windows+Linux ubuntu双系统安装
 
 参考资料：https://www.cnblogs.com/xlpc/p/12324535.html
-/#双系统 #Linux #Windows10
+. #双系统 #Linux #Windows10
 
 1. 清理磁盘空间(略)
    
