--- a/git/历史管理.md
+++ b/git/历史管理.md
@@ -5,14 +5,14 @@ type: operations
 
 # 基于git history插件的git历史管理
 
-vscode安装#git history插件后，要查看一个文件或文件夹的历史记录，
+#vscode 安装 #git #history 插件后，要查看一个文件或文件夹的历史记录，
 只需要在左边文件栏中右键点击某个文件/文件夹，
 ![](images/历史管理1.png)
 选择 git: view file history点击即可
 ![](images/历史管理2.png)
 文件编辑者和branch路径一目了然！
 
-## 基础概念
+## 基本概念
 ### HEAD
 这是当前分支版本顶端的别名，也就是在当前分支你最近的一个提交
 ### Index
@@ -32,7 +32,7 @@ working copy代表你正在工作的那个文件集
 
 
 ## 版本回退
-![](images/历史管理3.png)
+![](images/历史管理3.png) #版本管理
 如图，分为soft，hard，mixed两种(mixed为默认参数图中未出现)
 
 soft告诉Git重置HEAD到另外一个commit，但也到此为止。如果你指定--soft参数，Git将停止在那里而什么也不会根本变化。这意味着index,working copy都不会做任何变化，所有的在original HEAD和你重置到的那个commit之间的所有变更集都放在stage(index)区域中。
