--- a/git/历史管理.md
+++ b/git/历史管理.md
@@ -5,7 +5,7 @@ type: operations
 
 # 基于git history插件的git历史管理
 
-#vscode 安装 #git #history 插件后，要查看一个文件或文件夹的历史记录，
+#vscode 安装 #git history 插件后，要查看一个文件或文件夹的历史记录，
 只需要在左边文件栏中右键点击某个文件/文件夹，
 ![](images/历史管理1.png)
 选择 git: view file history点击即可
