--- a/git/历史管理.md
+++ b/git/历史管理.md
@@ -5,7 +5,7 @@ type: operations
 
 # 基于git history插件的git历史管理
 
-#vscode 安装 #git history 插件后，要查看一个文件或文件夹的历史记录，
+. #vscode 安装 #git history 插件后，要查看一个文件或文件夹的历史记录，
 只需要在左边文件栏中右键点击某个文件/文件夹，
 ![](images/历史管理1.png)
 选择 git: view file history点击即可
@@ -16,7 +16,7 @@ type: operations
 ### HEAD
 这是当前分支版本顶端的别名，也就是在当前分支你最近的一个提交
 ### Index
-index也被称为staging area，是指一整套即将被下一个提交的文件集合。他也是将成为HEAD的父亲的那个commit
+index也被称为staging area，是指一整套即将被下一个提交的文件集合。他也是将成为HEAD的子节点的那个commit
 ### Working Copy
 working copy代表你正在工作的那个文件集
 
