--- a/math-stat/1.md
+++ b/math-stat/1.md
@@ -7,11 +7,13 @@
 
 - 估计
   - 基本地：对参数模型估计参数
-    - 估计量$\phi(X_1,\cdots, X_n)$：输入$X_i$，输出估计的参数这种。“统计量”：“已知函数”（严格：可测）
-    - 参数是模型泛函的特殊情况
+    - 估计量$\phi(X_1,\cdots, X_n)$：输入$X_i$，输出某个量，“实际可行”的“算法”。
+    - 估计量“就是”统计量，也就是可以“实际计算”。
+    - “统计量”一词强调可以算。“估计量”一词强调用途：用于估计被估计量
+  - 参数是模型泛函的特殊情况
 - 假设检验
   - 分布函数是否属于某个集合？其实也可以看成特殊的泛函！
 ## 3 发展简史
 - “描述性统计”：“小学统计”，计算平均值画图等
 - 最小二乘法：开始具有推断性质
-到第8页
+- 贝叶斯学派：利用之前的经验！和传统方法相互争论
