--- a/math-stat/2.md
+++ b/math-stat/2.md
@@ -18,9 +18,27 @@
   - 均匀分布：假设左侧0，则是单参数。实际中为了简化问题，常用！
     - 这时两种估计都有明显缺陷。MLE总是偏小。矩估计可能胡说：比如0 0 0 0 0 0.8，这时……
 
-- 特例：序列
+- 特例：序列统计量
   - “改进”？需要下一节的优良标准。这里是无偏前提，方差小
   - 概率空间是什么？需要指定
 - 优良
   - 距离标准很重要！因为样本取的时候有随机性，参数$\theta$（从而$g(\theta)$）也可能有多种取值
   - 无偏：对于$\theta$决定一族，你任何一个来看，对样本平均，无偏
+
+## 2 估计的优良性标准
+“不次于”和“有效”：偏序。两个估计量不一定能如此比较
+重要：方差的无偏估计！
+充分统计量：$L = qh$，其中$q$是“充分统计量”和参数的（多元，$m+n$元）函数，$h$是不依赖于$\theta$的非负函数。比如两点分布时，“总数”。只需知道……即可，不用知道全部信息
+另一个理解方法：只需知道$\phi$，不知道$\theta$，也可以知道概率
+起码有一个维数相等的。但越降维越好
+
+- 指数型分布：定义体现“解耦”思想，使得$exp(\cdots)$（从而……）是充分统计量
+- 完全性：由任意参数期望为0推出几乎处处为0. $\Theta$有内点充分就完全
+  - 定理：完全的充分统计量，无偏估计，最小方差无偏估计
+  - 应用：正态分布的均值和方差、$X>c, X>Y$概率等
+- 无偏估计可能不存在：$1/(1+\theta^2)$
+
+- C-R不等式：方差不能任意小
+  - 这个下界有时还过小了
+
+- 相合性：大样本性质
