--- a/algorithm/反例.md
+++ b/algorithm/反例.md
@@ -4,3 +4,6 @@
 联合上位：`bccc`，新加入`b`
 分类讨论即可
 其实有反例：`bananas`
+- https://leetcode-cn.com/problems/number-of-ways-to-select-buildings/
+错误认为：对于`00111001`写成`2321`，然后`2*3*2+3*2*1`这种即可
+反例：`01010`
