--- a/algorithm/特判.md
+++ b/algorithm/特判.md
@@ -1,3 +1,6 @@
-https://leetcode-cn.com/problems/can-i-win/submissions/
+- https://leetcode-cn.com/problems/can-i-win/submissions/
 特判和为0（本来“不拿就够”一般指先手输，但和为0算先手赢）
 特判所有数之和小于待求
+- https://leetcode-cn.com/problems/zigzag-conversion/submissions/
+3行循环长度4，4行循环长度6，1行循环长度，0？所以要特判！
+注：当然这题没必要模拟。因为字符串本来就可以随机访问，又不是链表
