--- a/algorithm/特判.md
+++ b/algorithm/特判.md
@@ -4,3 +4,7 @@
 - https://leetcode-cn.com/problems/zigzag-conversion/submissions/
 3行循环长度4，4行循环长度6，1行循环长度，0？所以要特判！
 注：当然这题没必要模拟。因为字符串本来就可以随机访问，又不是链表
+- https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/submissions/
+我写的代码是先看总共5个节点，然后5-2=3，然后`while(--total)`即循环3-1=2次`p=p->next;`走到对应位置
+这时，要考虑`total`一来就0的情况！
+但是如果用哑节点，那就不需要了（参考官方题解）
