--- a/algorithm/反例.md
+++ b/algorithm/反例.md
@@ -1,9 +1,18 @@
 - 最长回文子串，错误认为
-右边新加入的一位“上位”有两种可能：自己上位或是和之前的联合上位。
-自己上位：`bccc`，新加入`c`，必须连续一堆重复
-联合上位：`bccc`，新加入`b`
-分类讨论即可
+    - 右边新加入的一位“上位”有两种可能：自己上位或是和之前的联合上位。
+    - 自己上位：`bccc`，新加入`c`，必须连续一堆重复
+    - 联合上位：`bccc`，新加入`b`
+    - 分类讨论即可
 其实有反例：`bananas`
 - https://leetcode-cn.com/problems/number-of-ways-to-select-buildings/
 错误认为：对于`00111001`写成`2321`，然后`2*3*2+3*2*1`这种即可
 反例：`01010`
+- https://leetcode-cn.com/problems/remove-duplicate-letters/
+错误认为：对于`cacdca`这类，每次看`c`下一位，从左到右看，第一个`cd`，那就留住这个`c`即可
+你如果只删除`c`，那么这样确实可以得到字典序最小。比如`acda`
+但你要考虑其它字母也会被删。比如`cdacbd`，只看`c`的话当然是`cdaba`好，但是同时考虑`d`的话，应该得到`acbd`更好
+- https://leetcode-cn.com/problems/regular-expression-matching/submissions/
+    - 认为必须第一个字符能match
+不一定！比如`a`对应`c*a`，`c*`可以是0个c
+    - 认为`p`和`s`一定同时为空或不为空
+不一定！比如`a`对应`ac*`，那么递归一层，考察空字符串和`c*`
