--- a/math-stat/2-estimation/方差的无偏估计.md
+++ b/math-stat/2-estimation/方差的无偏估计.md
@@ -6,4 +6,4 @@ $X$方差存在，则$S^2:=\frac 1{n-1}\sum (X_i-\bar X)^2$是方差的无偏估
 - $VarX=EX^2-(EX)^2$
 
 因此容易得到$ES^2 = \frac n{n-1}(EX_i^2-E\bar X^2)=\frac n{n-1}(VarX_i-Var\bar X)=\frac n{n-1}(1-\frac 1n)Var X_i=Var X_i$
-根据强大数律得强[[2-estimation-相合性]]
+根据强大数律得强[[相合性]]
