--- a/math-stat/2-estimation/优良标准.md
+++ b/math-stat/2-estimation/优良标准.md
@@ -1,6 +1,6 @@
 优良标准有许多。
-有趣的例子：单参数（只有上界不知道）的均匀分布，[[2-estimation-mle]]显然导致总是偏小，[[2-estimation-moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
-[[2-estimation-相合性]]当然是个好性质
+有趣的例子：单参数（只有上界不知道）的均匀分布，[[2-estimation-mle]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
+[[相合性]]当然是个好性质
 ## 无偏-有效性
 - $\phi$作为统计量，是随机变量（回忆[[1-introduction]]），其期望、方差等数字特征都和$\theta$相关，故有$E_\theta \phi$记号
 - 认为$\theta$之间没有高低贵贱之分，所有可能的$\theta$一律平等。
@@ -8,3 +8,4 @@
   - （一致）最小方差无偏估计的一致也是这个意思
 - 很多时候只能在无偏估计中考察最有效的
   - 甚至有时一直最小方差无偏估计也不存在
+- 如何找？[[找最佳]]
