--- a/math-stat/2-estimation/优良标准.md
+++ b/math-stat/2-estimation/优良标准.md
@@ -1,11 +1,13 @@
 优良标准有许多。
-有趣的例子：单参数（只有上界不知道）的均匀分布，[[2-estimation-mle]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
-[[相合性]]当然是个好性质
+有趣的例子：单参数（只有上界不知道）的均匀分布，[[mle]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
+- [[相合性]]当然是个好性质
 ## 无偏-有效性
 - $\phi$作为统计量，是随机变量（回忆[[1-introduction]]），其期望、方差等数字特征都和$\theta$相关，故有$E_\theta \phi$记号
 - 认为$\theta$之间没有高低贵贱之分，所有可能的$\theta$一律平等。
   - 所以全部$\theta$都满足$E_\theta\phi=...$才叫无偏。全部$\theta$都方差不更大才“不次于”（如果还有一个$\theta_0$使得方差更小才“有效”）
   - （一致）最小方差无偏估计的一致也是这个意思
-- 很多时候只能在无偏估计中考察最有效的
-  - 甚至有时一直最小方差无偏估计也不存在
-- 如何找？[[找最佳]]
+- 很多时候只能在无偏估计中考察最有效的。有偏的估计也考虑上？就不好讲了
+- 如何找一致最小方差无偏估计？[[找最佳]]
+- 无偏估计不存在的例子：二项分布$\theta$，$g(\theta)=\frac 1{1+\theta^2}$
+  - 因为给定$\theta$，$g(X)$期望是关于$\theta$的多项式（各个$\theta$，多项式系数相同），这个多项式不可能等于$\frac 1{1+\theta^2}$
+- 无偏估计不合理的例子：泊松分布$\theta$，$g(\theta)=e^{-2\theta}$. 样本量为1. 直接写出期望的定义，等于$e^{-2\theta}$，令对一切$\theta$成立，得到不合理结果（观测值奇数时估计量为-1）
