--- a/math-stat/2-estimation/优良标准.md
+++ b/math-stat/2-estimation/优良标准.md
@@ -11,3 +11,7 @@
 - 无偏估计不存在的例子：二项分布$\theta$，$g(\theta)=\frac 1{1+\theta^2}$
   - 因为给定$\theta$，$g(X)$期望是关于$\theta$的多项式（各个$\theta$，多项式系数相同），这个多项式不可能等于$\frac 1{1+\theta^2}$
 - 无偏估计不合理的例子：泊松分布$\theta$，$g(\theta)=e^{-2\theta}$. 样本量为1. 直接写出期望的定义，等于$e^{-2\theta}$，令对一切$\theta$成立，得到不合理结果（观测值奇数时估计量为-1）
+## 置信区间
+- 置信水平：同样也是参数一律平等。要求参数落在两个统计量间概率一致地大于等于$\gamma$
+- 优良：定性标准：置信水平高，置信区间小
+- 力求置信系数达到所要求置信水平（比较“紧”，不浪费！）
