--- a/math-stat/2-estimation/序列统计量.md
+++ b/math-stat/2-estimation/序列统计量.md
@@ -1,5 +1,15 @@
+## 定义
+从小到大排列$X_i$，得到$X_{(1)}\cdots X_{(n)}$
+- 利用对称性：$[\theta,\theta+1]$上均匀分布，显然有$E (min-\theta)=E(\theta+1-max)$. 中间的各个序列统计量也有类似的对称性式子。由此可找无偏估计（参考[[unbiased]]）
+## 数字特征
+i.i.d.，共同分布函数$F(x)$
+$P(X_{(i)}\le F(x))$，实质上可以看作均匀分布中的$P(X_{(i)}\le p)$，然后先算密度函数再算分布函数。密度函数显然是$C_n^{i-1}\cdot (n-i+1)x^{i-1}(1-x)^{n-i}$
+从而$F(x)$（连续函数）则均值$i/(n+1)$，方差$i(n+1-i)/((n+1)^2(n+2))$（哈哈方差这边显然能看出一阶矩和二阶矩是啥，进一步能看出分部积分的模样了）
+## 一个估计中的应用（这里序列统计量记为$k_i$）
 利用德军坦克$n$个序列号估计总数：直接使用计数原理计算$P(k_n=i)$这种值，并利用组合恒等式得到$Ek_1,Ek_n$证明某些统计量是无偏估计
-进一步，已知$Ek_1=\frac {N+1}{n+1},Ek_n = \frac{(N+1)n}{n+1}$，如何使得无偏，方差最小？（参考[[优良标准]]）
+进一步，已知$Ek_1=\frac {N+1}{n+1},Ek_n = \frac{(N+1)n}{n+1}$，如何使得无偏，方差最小？参考[[优良标准]]
 此处课本有个初等证明。核心思想是
 - 统计量$\psi$在确定$k_n=l$时的期望作为统计量，正是估计量$W_2$（只和$k_n$有关）
 - 证明最优的方法：$E_N(\psi-N)^2=E_N(\psi-W_2)^2+E_N(W_2-N)^2$
+
+备注：这里$Ek_1$表达式计算思想和序列统计量的数字特征是一样的。都是计数原理一下！
