--- a/math-stat/2-estimation/找最佳.md
+++ b/math-stat/2-estimation/找最佳.md
@@ -1,8 +1,9 @@
 - B-L-S定理：[[完全统计量]]且[[充分统计量]]的**函数**是参数的**函数**的无偏估计，就是最小方差无偏估计
-  - 无偏估计、最小方差无偏估计参考[[优良标准]]
+  - 无偏估计、最小方差无偏估计参考[[优良标准]]，[[unbiased]]
   - 对于参数空间有内点的[[exponential]]就只需要[[充分统计量]]。参考[[完全统计量]]的判定
   - [[充分统计量]]的函数，特别地可能是统计量本身
   - 参数的函数，特别地可能是参数本身
+  - [[方差的无偏估计]]中，$S^2$显然是参数空间有内点的[[exponential]]的[[充分统计量]]的函数，所以这是最小方差无偏估计
 - C-R不等式：达到一定是最佳，达不到不一定不是（这个下界可能过小）、
   - 正则性条件（口头描述用。详细参见课本p36）
     - 密度函数非零的区域和参数$\theta$无关
