--- a/math-stat/2-estimation/优良标准.md
+++ b/math-stat/2-estimation/优良标准.md
@@ -6,12 +6,20 @@
 - 认为$\theta$之间没有高低贵贱之分，所有可能的$\theta$一律平等。
   - 所以全部$\theta$都满足$E_\theta\phi=...$才叫无偏。全部$\theta$都方差不更大才“不次于”（如果还有一个$\theta_0$使得方差更小才“有效”）
   - （一致）最小方差无偏估计的一致也是这个意思
+  - 更多无偏性相关参考[[unbiased]]
 - 很多时候只能在无偏估计中考察最有效的。有偏的估计也考虑上？就不好讲了
+  - 有时有偏的均方误差更小。比如[[normal]]，[[方差的无偏估计]]$S^2$的均方误差比$S^2(1-1/n)$大。参考[[偏差-方差分解]]，计算参考[[normal]]的各阶矩爆算，或是背诵[[chi-square]]的方差
+
+|估计量|偏差|方差|均方误差|
+|-|-|-|-|
+|$S^2$|0|$2\sigma^4/(n-1)$|$2\sigma^4/(n-1)$|
+|$\frac {n-1}n \cdot S^2$|$\sigma^2/n$|$2(n-1)\sigma^4/n^2$|$(2n-1)\sigma^4/n^2$|
 - 如何找一致最小方差无偏估计？[[找最佳]]
-- 无偏估计不存在的例子：二项分布$\theta$，$g(\theta)=\frac 1{1+\theta^2}$
-  - 因为给定$\theta$，$g(X)$期望是关于$\theta$的多项式（各个$\theta$，多项式系数相同），这个多项式不可能等于$\frac 1{1+\theta^2}$
-- 无偏估计不合理的例子：泊松分布$\theta$，$g(\theta)=e^{-2\theta}$. 样本量为1. 直接写出期望的定义，等于$e^{-2\theta}$，令对一切$\theta$成立，得到不合理结果（观测值奇数时估计量为-1）
 ## 置信区间
 - 置信水平：同样也是参数一律平等。要求参数落在两个统计量间概率一致地大于等于$\gamma$
-- 优良：定性标准：置信水平高，置信区间小
+- 优良：定性标准：置信水平高，置信区间小（窄）
+  - 但宽度往往是随机变量，没法人为确定
 - 力求置信系数达到所要求置信水平（比较“紧”，不浪费！）
+  - 但很多时候做不到（比如课本上对伯努利分布证明了没法一直“紧”）
+  - 没法一致地紧，但可以有一个点“紧”。[[统计量方法]]至少保证一个点紧
+- [[相合性]]往往可传递，[[unbiased]]不行。置信区间可以（比如已知$\sigma^2$置信区间，求$\sigma$置信区间）
