--- a/math-stat/2-estimation/分布函数估计.md
+++ b/math-stat/2-estimation/分布函数估计.md
@@ -3,4 +3,4 @@
 - Glivenko-Cantelli
 结论：$F_n$与$F$差绝对值上界几乎一定趋于0
 证明思路：考察许多$k/\gamma$分位数，这有限个（$\gamma$量级）点一致就决定了全部的一致
-- 估计分位数：$X_{([np]+1)}$，当$F(x)=p$根唯一时，分位数唯一时，该估计强相合
+- 估计[[分位数]]：$X_{([np]+1)}$，当$F(x)=p$根唯一时（“最好的情况”），该估计强相合
