--- a/math-stat/3-hypothesis/单参数.md
+++ b/math-stat/3-hypothesis/单参数.md
@@ -16,7 +16,9 @@
     - 这时很有可能不好显式解，需要多次“试查”
     - 除非有对称性（类比拓展2那样），比较容易查出
   - 备择假设是参数在某个区间外，那否定域也就相应变一下呗
+    - 但是：否定域不联通的这个不再是[[UMP]]，只是[[UMP]]U
 - 拓展2
   - 备择假设是参数不等于某，怎么办？缺一个方程
   - 补充$E_{\theta_0}(I_{W_0}(X)\sum V)=P_{\theta_0}(X\in W_0)E_{\theta_0}(\sum V)$
   - 一个充分条件：$t=\sum V$的分布关于某个数对称，然后取$C_1,C_2$是对称点。比如[[normal]]已知方差
+- 实际应用：很多时候，看作满足正态。然后“是否显著误差、不同”时$H_0$是等于某某，“是否显著大于/小于/好”就是单侧。看习题
