--- a/math-stat/3-hypothesis/广义似然比.md
+++ b/math-stat/3-hypothesis/广义似然比.md
@@ -3,6 +3,9 @@
 - 价格小说明更有可能接受。比如特别地，对于$\#(\Theta)=2$情况，价格为1就说明了……
 - 所以接受域放低价，否定域放高价
 - 同样也是找个阈值$\lambda_0$，不过这回的阈值相比[[似然比]]，是要求$\Theta_0$内一切$\theta$都能**一致**地足够可靠（检验水平$\alpha$足够小）
+  - 虽然说一致，但是本节常见情况（检验某个参数是否大于/小于/等于某个值）只用考察一个点
+  - 这里的检验水平（临界值）对比[[p-value]]
+  - 这个“一致”和[[UMP]]不是一个意思（参见[[水平和功效]]）
 
 与[[充分统计量]]关系：似然函数、广义似然比都是充分统计量的函数，因此否定域常常用[[充分统计量]]属于某集合表示（间接表示了$X_i$属于某集合）
 举例：未知均值和方差的正态分布，$H_0:\mu=\mu_0$
@@ -30,10 +33,13 @@
 
 Behrens-Fisher问题：方差不等，检验均值
 - 直观：$\bar X-\bar Y$的均值……，方差……，故归一化后的……满足正态
-- 但这样归一化中包含参数，不是统计量。所以涉及的$\sigma$换成$S$，这样不再是正态，而是接近于某个自由度的$t$分布
+- 但这样归一化中包含参数，不是统计量。所以涉及的$\sigma$换成$S$，这样不再是正态，而是接近于某个自由度的[[t]]分布
+  - 即：近似认为$T=\frac{\bar X - \bar Y}{\sqrt {S_1^2/{n_1}+S_2^2/n_2}}\sim (\frac {S^2_1}{n_1}+\frac {S^2_2}{n_2})^2/((\frac {S^2_1}{n_1})^2/(n_1-1)+(\frac {S^2_2}{n_2})^2/(n_2-1))个自由度t分布$
+  - 特殊情况：$Y$为恒量，则$\sqrt n_1 \bar X/S_1\sim t_{n_1-1}$
 - 比较这个统计量是否绝对值大/大/小，即可解决问题
 - 实际问题中，可以先判断方差是否相同（计算刚刚的$F=S_1^2/S_2^2$）
 
 不相互独立：设$z_i=x_i-y_i$，零假设是$\mu_x=\mu_y$，那就使用$\bar z\sqrt n/S_z$作为$T$，利用$T$的分布是t分布即可
 - 成对数据：两个总体有时可变成一个总体（最理想）
+  - 同样的数据，假设是否成对可能有不同结果（单总体/两总体）
 - 双盲（随机化方案）的目的往往也是如此
