--- a/math-stat/查表.md
+++ b/math-stat/查表.md
@@ -1,2 +1,4 @@
-很多时候，人为做正规化等，构造出满足……的统计量，再查[[分位数]]表来做[[2-estimation]]，[[3-hypothesis]]
-例子：[[normal]]，[[t]]，[[chi-square]]等（后两者是两“族”，对于每个自然数有一个分布）
+- 很多时候，人为做正规化等，构造出满足……的统计量，再查[[分位数]]表来做[[2-estimation]]，[[3-hypothesis]]
+- [[2-estimation]]例子：[[normal]]，[[t]]，[[chi-square]]等（后两者是两“族”，对于每个自然数有一个分布）
+  - 区间估计时很好用
+- [[3-hypothesis]]中也有大量构造统计量，查表使用分位数（联系[[水平和功效]]中的水平）的例子
