--- a/math-stat/3-hypothesis/广义似然比.md
+++ b/math-stat/3-hypothesis/广义似然比.md
@@ -14,7 +14,7 @@
   - 之后省略步骤
   - 注意：如果似然比可以写成某个统计量的增函数，那否定域当然可用这个统计量表示
 - 回忆[[t]]，定义$T=\frac{\sqrt n (\bar x-\mu_0)}{S}$，则否定域形如$|T|>C$. 根据检验水平定义，当$H_0$成立时应当只有$\alpha$概率否定，这样即可查表
-  - 查表依据：**零假设成立时**，满足[[t]]分布
+  - 查表依据：**零假设成立时**，满足[[t]]分布，回忆[[UMP]]
 - 是[[UMP]]U
 
 类比拓展（也很多都可以证明是[[UMP]]U，但不一定，有时需要额外“边际产值相等”，会比较繁琐）
