--- a/math-stat/3-hypothesis/非参数检验.md
+++ b/math-stat/3-hypothesis/非参数检验.md
@@ -9,7 +9,7 @@
 绝对秩：绝对值排序。关于0对称的连续分布的总体，
 符号秩和：$\sum \phi(Z_i)R_i^+$，$\phi$是分段函数（小0大1），$R^+$是绝对秩。可用于[[查表]]检验是否关于0对称
 本质：**假设成立时怎么样**是很清楚的（水平可以控制），假设不成立时功效大（但具体功效有大有小我们控制不了）
-回忆[[广义似然比]]我们疯狂考察零假设成立时某统计量的分位数（比如$T$，$F$，查[[t]]表，其实和本节很多都是类似的。只不过本节的表很多不如[[t]]用处广）
+回忆[[UMP]]，我们老是考察零假设成立时某统计量的分位数（比如$T$，$F$，查[[t]]表，其实和本节很多都是类似的。只不过本节的表很多不如[[t]]用处广）
 
 |统计量|本质|
 |-|-|
