--- a/math-stat/偏差-方差分解.md
+++ b/math-stat/偏差-方差分解.md
@@ -1,2 +1,4 @@
 $E(\bar X-\mu)^2=E((\bar X-E\bar X)+(E\bar X-\mu))^2=Var\bar X+0(交叉项)+Bias^2(注意E\bar X-\mu是常数)$
-实质：方差和均方误差，所针对的那个常数不同。这个常数动一动就是偏差-方差分解。当然动到$E\bar X$则“那一项最小”，可以联想“分解”含义
+实质：方差和均方误差，实际上就是“针对的那个”（相对谁作差）常数不同
+这个常数动一动就是偏差-方差分解
+当然动到$E\bar X$则有某项“最小”。这可以帮助理解记忆“分解”的含义
