--- a/latex/example-doc/math-extension.tex
+++ b/latex/example-doc/math-extension.tex
@@ -14,7 +14,10 @@
 \begin{prooftree}
     \AxiomC{$\phi$}
     \AxiomC{$\psi$}
+    \LeftLabel{(a)}
     \RightLabel{($\wedge$I)}
     \BinaryInfC{$( \phi \wedge \psi )$}
+    \RightLabel{($\wedge$E)}
+    \UnaryInfC{$\phi$}
 \end{prooftree}
 \end{document}
