--- a/general-principles/化归.md
+++ b/general-principles/化归.md
@@ -1,3 +1,3 @@
 - 局部增大复杂度，但总体统一化，更简单，是化归手段！
   - 比如[[multi-ary]]一来讲到把$Wx+b$的$b$形式上写成$b \cdot x_0\equiv b\cdot 1$
-  - 比如[[failures]]需要“化归”一开始不同的环境。看起来多了一个操作，但之后更简单
+  - 比如[[automation/trivial-mistakes]]需要“化归”一开始不同的环境。看起来多了一个操作，但之后更简单
