--- a/math-stat/2-estimation/相合性.md
+++ b/math-stat/2-estimation/相合性.md
@@ -19,6 +19,6 @@
     - 即mle偏差达到$\delta_m$的概率为0. 然后只需可数个零测集并也是零测集即可
   - 备注：此处既不是直接用强大数律推出强相合性，也不是像之后说的一样完全拆除包装，只用[[borel-cantelli]]证明强相合性。而是中途用了包装了的强大数律，证明偏差的概率为0. 用了包装，但没完全用，有意思！
 ## 用[[borel-cantelli]]证明相合性
-其实强大数律用的也是[[borel-cantelli]]. 我们这里就是拆包装（参见[[primitive-operations]]）
+其实强大数律用的也是[[borel-cantelli]]. 我们这里就是拆包装（参见[[leaky-abstraction]]）
 一般用法是证明$\forall \epsilon, P(距离_n\ge \epsilon)$（关于$n$）求和收敛（这时，如果不强相合，则存在概率大于0的事件，$\overline{lim} 距离_n>0$，矛盾）
 - 举例：均匀分布上下限的[[mle]]的强相合性。这里求和就是等比级数
