--- a/latex/example-beamer/beamer-with-citations/beamer-with-citations.tex
+++ b/latex/example-beamer/beamer-with-citations/beamer-with-citations.tex
@@ -1,7 +1,7 @@
 \documentclass{beamer}
 \mode<presentation> {\usetheme{Ilmenau}}
 
-\usepackage[bookmarks=true]{hyperref} %
+\usepackage[bookmarks=true]{hyperref} % not compulsory, but convenient for jumping
 
 \title[Short Title]{Full Title}
 \author{You}
