--- a/devices/供电.md
+++ b/devices/供电.md
@@ -2,7 +2,10 @@
 小总结：开关打不开？
 - 可能是功率不够
 - 可能是接触不好
-- 可能是有个开关你没发现（比如有台主机除了上面“常用”的开机按钮，下面还有一个`-/o`的开关，`-`是开）
+- 可能是有个开关你没发现
+  - 比如有台主机除了上面“常用”的开机按钮，下面还有一个`-/o`的开关，`-`是开
+  - 比如插排开关没开
+    - 有些插排每次重插都要重开
 - 可能是设备不允许频繁开关，如[[on-off]]
 
 大部分设备充电时和充电满了都有提示
