--- a/devices/供电.md
+++ b/devices/供电.md
@@ -1,4 +1,4 @@
-供电出问题，充电充不上，请排查[[走线]]，[[interface]]，[[cable]]，乃至开关开没开
+供电出问题，充电充不上，请排查[[走线]]，[[interface]]，[[adapter-cable]]，乃至开关开没开
 小总结：开关打不开？
 - 可能是功率不够
 - 可能是接触不好
