--- a/math-stat/2-estimation/充分统计量.md
+++ b/math-stat/2-estimation/充分统计量.md
@@ -5,7 +5,7 @@
 另一个理解途径
 - 只需知道充分统计量$\phi$，不知道$\theta$，也可以知道概率
 - $P((X_1\cdots)\in A|\phi (X_1\cdots)=u_0)$和$\theta$无关
-  - 原因是写出条件概率表达式，$q$（“包”）抵消，只剩下$h$
+  - 原因是写出条件概率表达式，$q$（“包装”）抵消，只剩下$h$
 - 其实是充要条件
 
 不同的$q$可以包装起来不同的$X_i$的函数。充分统计量不唯一
