--- a/math-stat/2-estimation/序列统计量.md
+++ b/math-stat/2-estimation/序列统计量.md
@@ -8,19 +8,19 @@
     - 密度函数显然是$C_n^{i-1}\cdot (n-i+1)x^{i-1}(1-x)^{n-i}$
     - 从而$F(x)$（连续函数）则均值$i/(n+1)$，方差$i(n+1-i)/((n+1)^2(n+2))$
 - 方差其实很好记，参考[[character/var]]的$EX^2 - (EX)^2$
-  - 此处$(EX)^2 = i^2/(n+1)^2$
-  - 当然看出$EX^2 = ((n+1)i-i^2+(n+2)i^2)/((n+1)^2(n+2))=i(i+1)/(n+1)(n+2)$
-  - 这不就是分部积分的形状吗哈哈哈，跟$i/(n+1)$一个道理
+  - $(EX)^2 = i^2/(n+1)^2$
+  - $EX^2 = i(i+1)/(n+1)(n+2)$
+  - $EX^2$这不就是分部积分的形状吗哈哈哈，跟$i/(n+1)$一个道理
 ## 一个有趣思想
 如何直观记忆$i/(n+1)$？比如$[0,1]$中随机取$n$个点
 你不妨看成一个圈上除了12点钟方向，随机取$n$个点
-或者整个圈上随机取$n+1$个点
+或者整个圈上随机取$n+1$个点（12点钟那个点也是一个一般的点）
 那不就出现了$i/(n+1)$吗
 ## 一个估计中的应用（这里序列统计量记为$k_i$）
-利用德军坦克$n$个序列号估计总数：直接使用计数原理计算$P(k_n=i)$这种值，并利用组合恒等式得到$Ek_1,Ek_n$证明某些统计量是无偏估计
-进一步，已知$Ek_1=\frac {N+1}{n+1},Ek_n = \frac{(N+1)n}{n+1}$，如何使得无偏，方差最小？参考[[优良标准]]
+利用德军坦克$n$个序列号估计总数：直接使用计数原理计算$P(k_n=i)$这种值，并利用组合恒等式得到$Ek_1,Ek_n$，从而证明某些统计量是某些东西的无偏估计
+进一步，已知$Ek_1=\frac {N+1}{n+1},Ek_n = \frac{(N+1)n}{n+1}$，如何使得无偏，方差最小？（参考[[优良标准]]）
 此处课本有个初等证明。核心思想是
 - 统计量$\psi$在确定$k_n=l$时的期望作为统计量，正是估计量$W_2$（只和$k_n$有关）
 - 证明最优的方法：$E_N(\psi-N)^2=E_N(\psi-W_2)^2+E_N(W_2-N)^2$
 
-备注：这里$Ek_1$表达式计算思想和序列统计量的数字特征是一样的。都是计数原理一下！
+注：这里$Ek_1$表达式计算思想和序列统计量的数字特征是一样的。都是计数原理一下！
