--- a/math-stat/2-estimation/找最佳.md
+++ b/math-stat/2-estimation/找最佳.md
@@ -3,7 +3,7 @@
   - 对于参数空间有内点的[[exponential]]就只需要[[充分统计量]]。参考[[完全统计量]]的判定
   - [[充分统计量]]的函数，特别地可能是统计量本身
   - 参数的函数，特别地可能是参数本身
-  - [[方差的无偏估计]]中，$S^2$显然是参数空间有内点的[[exponential]]的[[充分统计量]]的函数，所以这是最小方差无偏估计
+  - [[方差的无偏估计]]中，正态分布的$S^2$显然是参数空间有内点的[[exponential]]的[[充分统计量]]的函数，又无偏，所以是最小方差无偏估计
 - C-R不等式：达到一定是最佳，达不到不一定不是（这个下界可能过小）、
   - 正则性条件（口头描述用。详细参见课本p36）
     - 密度函数非零的区域和参数$\theta$无关
@@ -21,5 +21,5 @@
     - $g'(\theta)=(无偏定义)\cdots =(\psi 扔积分号里)\cdots=(减去常数g(\theta)乘以积分为0的东西)\cdots$
     - $g'^2\le (C-S不等式)Var_\theta(\psi)\cdot E_\theta(\sum \cdots)^2=(i.i.d.，交叉项没了)Var\cdot nI$
 - 两者联系
-  - 利用B-L-S定理，证明C-R不等式下界过小
+  - 利用B-L-S定理，有时可证明C-R不等式下界过小
   - B-L-S定理不一定单参数，C-R针对单参数
