--- a/math-stat/2-estimation/枢轴量方法.md
+++ b/math-stat/2-estimation/枢轴量方法.md
@@ -4,7 +4,7 @@
   - $\sum X_i$满足$\Gamma$分布（[[distribution/gamma]]分布可加性！）$\Gamma(n,\lambda)$
   - 但这时$e$指数处有$\lambda$，烦！那就直接$\lambda \sum X_i$，这回得到枢轴量了
   - 卡方分布$\Gamma (\frac n2,\frac 12)$. 故由$2n$个自由度的卡方分布表可以查表（参考[[distribution/gamma]]和[[chi-square]]的关系）
-  - 为了得到好的置信区间，理想情况密度函数相等（相当于“边际产值相等”）。实际中偷懒用平分法（0到下限占$\frac {1-\gamma}2$，上限到无穷占$\frac {1-\gamma}2$）
+  - 为了得到好的置信区间，理想情况下上界和下界密度函数相等（相当于“边际产值相等”）。实际中偷懒用平分法（0到下限占$\frac {1-\gamma}2$，上限到无穷占$\frac {1-\gamma}2$）
   - 这个“边际产值相等”是普遍结论
 - 例：正态分布[[normal]]已知$\sigma$
   - 则$\frac{\sum X_i-n\mu}{\sqrt n \sigma}$是枢轴量，$\sim N(0,1)$
