--- a/math-stat/2-estimation/优良标准.md
+++ b/math-stat/2-estimation/优良标准.md
@@ -2,7 +2,7 @@
 有趣的例子：单参数（只有上界不知道）的均匀分布，[[mle]]显然导致总是偏小，[[moment]]可能给出明显不可能的结果（比如$0,0,0,0,0.8$）。这些都不令人满意
 - [[相合性]]当然是个好性质
 ## 无偏-有效性
-- $\phi$作为统计量，是随机变量（回忆[[1-introduction]]），其期望、方差等数字特征都和$\theta$相关，故有$E_\theta \phi$记号
+- $\phi$作为统计量，是随机变量（回忆[[math-stat/1-introduction]]），其期望、方差等数字特征都和$\theta$相关，故有$E_\theta \phi$记号
 - 认为$\theta$之间没有高低贵贱之分，所有可能的$\theta$一律平等。
   - 所以全部$\theta$都满足$E_\theta\phi=...$才叫无偏。全部$\theta$都方差不更大才“不次于”（如果还有一个$\theta_0$使得方差更小才“有效”）
   - （一致）最小方差无偏估计的一致也是这个意思
@@ -22,4 +22,6 @@
 - 力求置信系数达到所要求置信水平（比较“紧”，不浪费！）
   - 但很多时候做不到（比如课本上对伯努利分布证明了没法一直“紧”）
   - 没法一致地紧，但可以有一个点“紧”。[[统计量方法]]至少保证一个点紧
-- [[相合性]]往往可传递，[[unbiased]]不行。置信区间可以（比如已知$\sigma^2$置信区间，求$\sigma$置信区间）
+- 优良性传递
+  - [[相合性]]往往可传递，[[unbiased]]不行
+  - 置信区间可以（比如已知$\sigma^2$置信区间，求$\sigma$置信区间）
