--- a/latex/example-doc/citation-base.tex
+++ b/latex/example-doc/citation-base.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 
-\usepackage[bookmarks=true]{hyperref} % not compulsory, but convenient for jumping
+\usepackage{hyperref} % not compulsory, but convenient for jumping
 
 \title{Example}
 \author{You}
