--- a/latex/example-doc/citation-multi-id-for-one-paper.tex
+++ b/latex/example-doc/citation-multi-id-for-one-paper.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 
-\usepackage[bookmarks=true]{hyperref} % not compulsory, but convenient for jumping
+\usepackage{hyperref} % not compulsory, but convenient for jumping
 
 \title{Example}
 \author{You}
