pytorch lightning example

--- a/python/jupyter-notebook/example.ipynb
+++ b/python/jupyter-notebook/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,12 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use **vscode** to edit `Markdown` blocks and debug `python` blocks efficiently.\n",
-    "\n",
-    "- Install `python` extension in vscode.\n",
-    "- Make a new `.ipynb` file.\n",
-    "- Use vscode to edit and debug.\n",
-    "  - For an interpreter for the first time: `conda install -n pytorch_test ipykernel --update-deps --force-reinstall`"
+    "**M***ark*`down` $formulae$"
    ]
   }
  ],
