compare the training process of pl and non-pl

--- a/pytorch/basics/minimum.ipynb
+++ b/pytorch/basics/minimum.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n",
+      "400\n",
       "(tensor([0., 0.]), tensor([4.]))\n",
       "(tensor([1., 0.]), tensor([7.]))\n"
      ]
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,42 +132,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 19, loss: 0.09063121676445007\n",
+      "epoch: 19, loss: 0.00132819265127182\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0089, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 3.0008, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([3.3611], requires_grad=True))\n",
+      "tensor([3.7311], requires_grad=True))\n",
       "\n",
-      "epoch: 39, loss: 0.010128804482519627\n",
+      "epoch: 39, loss: 26.613737106323242\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0028, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 3.0310, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([3.7703], requires_grad=True))\n",
+      "tensor([1.7559], requires_grad=True))\n",
       "\n",
-      "epoch: 59, loss: 9.519350714981556e-05\n",
+      "epoch: 59, loss: 0.004904955625534058\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0003, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 2.9938, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([3.9647], requires_grad=True))\n",
+      "tensor([6.5013], requires_grad=True))\n",
       "\n",
-      "epoch: 79, loss: 6.176996976137161e-07\n",
+      "epoch: 79, loss: 0.0010834857821464539\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0000, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 2.9926, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([3.9989], requires_grad=True))\n",
+      "tensor([6.9206], requires_grad=True))\n",
       "\n",
-      "epoch: 99, loss: 3.725290298461914e-09\n",
+      "epoch: 99, loss: 81.99793243408203\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0000, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 3.0423, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([3.9997], requires_grad=True))\n",
+      "tensor([3.7922], requires_grad=True))\n",
       "\n"
      ]
     }
@@ -196,15 +196,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([304.0002], grad_fn=<AddBackward0>)\n",
-      "tensor([30000054.], grad_fn=<AddBackward0>)\n"
+      "tensor([308.0248], grad_fn=<AddBackward0>)\n",
+      "tensor([30423264.], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
@@ -229,49 +229,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 19, loss: 3.725290298461914e-09\n",
+      "epoch: 19, loss: 0.01000823825597763\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0000, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 3.0009, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([3.9999], requires_grad=True))\n",
+      "tensor([3.7533], requires_grad=True))\n",
       "\n",
-      "epoch: 39, loss: 0.0\n",
+      "epoch: 39, loss: 0.0021298080682754517\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0000, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 3.0007, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([4.0000], requires_grad=True))\n",
+      "tensor([3.7682], requires_grad=True))\n",
       "\n",
-      "epoch: 59, loss: 0.0\n",
+      "epoch: 59, loss: 3.5762786865234375e-07\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0000, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 3.0005, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([4.0000], requires_grad=True))\n",
+      "tensor([3.8003], requires_grad=True))\n",
       "\n",
-      "epoch: 79, loss: 0.0\n",
+      "epoch: 79, loss: 1.126900315284729e-05\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0000, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 3.0004, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([4.0000], requires_grad=True))\n",
+      "tensor([3.8462], requires_grad=True))\n",
       "\n",
-      "epoch: 99, loss: 0.0\n",
+      "epoch: 99, loss: 2.436339855194092e-06\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[3.0000, 0.6755]], requires_grad=True))\n",
+      "tensor([[ 3.0003, -0.4809]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([4.0000], requires_grad=True))\n",
+      "tensor([3.8945], requires_grad=True))\n",
+      "\n",
+      "epoch: 119, loss: 1.3075768947601318e-06\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0002, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([3.9369], requires_grad=True))\n",
+      "\n",
+      "epoch: 139, loss: 1.862645149230957e-07\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0001, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([3.9697], requires_grad=True))\n",
+      "\n",
+      "epoch: 159, loss: 2.60770320892334e-08\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([3.9909], requires_grad=True))\n",
+      "\n",
+      "epoch: 179, loss: 5.5246055126190186e-06\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([3.9974], requires_grad=True))\n",
+      "\n",
+      "epoch: 199, loss: 2.384185791015625e-07\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0006], requires_grad=True))\n",
+      "\n",
+      "epoch: 219, loss: 1.4901161193847656e-08\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0002], requires_grad=True))\n",
+      "\n",
+      "epoch: 239, loss: 2.039968967437744e-05\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0009], requires_grad=True))\n",
+      "\n",
+      "epoch: 259, loss: 7.88271427154541e-06\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0006], requires_grad=True))\n",
+      "\n",
+      "epoch: 279, loss: 1.4901161193847656e-08\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0014], requires_grad=True))\n",
+      "\n",
+      "epoch: 299, loss: 2.384185791015625e-05\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0027], requires_grad=True))\n",
+      "\n",
+      "epoch: 319, loss: 1.4901161193847656e-08\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0006], requires_grad=True))\n",
+      "\n",
+      "epoch: 339, loss: 7.301568984985352e-07\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0020], requires_grad=True))\n",
+      "\n",
+      "epoch: 359, loss: 0.0002319030463695526\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0001, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0017], requires_grad=True))\n",
+      "\n",
+      "epoch: 379, loss: 7.051974534988403e-06\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([3.9970], requires_grad=True))\n",
+      "\n",
+      "epoch: 399, loss: 9.5367431640625e-07\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0032], requires_grad=True))\n",
+      "\n",
+      "epoch: 419, loss: 1.341104507446289e-07\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([3.9989], requires_grad=True))\n",
+      "\n",
+      "epoch: 439, loss: 3.725290298461914e-08\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0030], requires_grad=True))\n",
+      "\n",
+      "epoch: 459, loss: 6.247684359550476e-05\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([3.9989], requires_grad=True))\n",
+      "\n",
+      "epoch: 479, loss: 3.2570213079452515e-05\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0033], requires_grad=True))\n",
+      "\n",
+      "epoch: 499, loss: 7.450580596923828e-09\n",
+      "name, parameters: ('model.weight', Parameter containing:\n",
+      "tensor([[ 3.0000, -0.4809]], requires_grad=True))\n",
+      "name, parameters: ('model.bias', Parameter containing:\n",
+      "tensor([4.0046], requires_grad=True))\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "loss_fn = nn.MSELoss()\n",
-    "for epoch in range(100):\n",
+    "optimizer = Adam(model.parameters(), lr=1e-4)\n",
+    "for epoch in range(500):\n",
     "    for batch, (x, y) in enumerate(train_dataloader):\n",
     "        loss = loss_fn(model(x), y)\n",
     "        optimizer.zero_grad()\n",
@@ -293,15 +413,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([304.], grad_fn=<AddBackward0>)\n",
-      "tensor([30000004.], grad_fn=<AddBackward0>)\n"
+      "tensor([304.0034], grad_fn=<AddBackward0>)\n",
+      "tensor([29999892.], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
