--- a/pytorch/lightning/example.ipynb
+++ b/pytorch/lightning/example.ipynb
@@ -10,17 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hyperplane/anaconda3/envs/pytorch_test/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -54,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,42 +133,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 19, loss: 9.914487600326538e-05\n",
+      "epoch: 19, loss: 1.2293457984924316e-07\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[ 3.0004, -0.0428]], requires_grad=True))\n",
+      "tensor([[2.9999, 0.2765]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([3.8486], requires_grad=True))\n",
+      "tensor([4.0463], requires_grad=True))\n",
       "\n",
-      "epoch: 39, loss: 0.6594313979148865\n",
+      "epoch: 39, loss: 0.0001651458442211151\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[ 3.0015, -0.0428]], requires_grad=True))\n",
+      "tensor([[2.9947, 0.2765]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([1.8757], requires_grad=True))\n",
+      "tensor([6.1100], requires_grad=True))\n",
       "\n",
-      "epoch: 59, loss: 0.0034229084849357605\n",
+      "epoch: 59, loss: 72.84194946289062\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[ 3.0021, -0.0428]], requires_grad=True))\n",
+      "tensor([[2.9516, 0.2765]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([3.2428], requires_grad=True))\n",
+      "tensor([5.8897], requires_grad=True))\n",
       "\n",
-      "epoch: 79, loss: 49.69294738769531\n",
+      "epoch: 79, loss: 0.006389569491147995\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[ 3.0402, -0.0428]], requires_grad=True))\n",
+      "tensor([[3.0070, 0.2765]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([0.2279], requires_grad=True))\n",
+      "tensor([1.1720], requires_grad=True))\n",
       "\n",
-      "epoch: 99, loss: 0.025504864752292633\n",
+      "epoch: 99, loss: 3.1487696170806885\n",
       "name, parameters: ('model.weight', Parameter containing:\n",
-      "tensor([[ 3.0107, -0.0428]], requires_grad=True))\n",
+      "tensor([[3.0110, 0.2765]], requires_grad=True))\n",
       "name, parameters: ('model.bias', Parameter containing:\n",
-      "tensor([-0.4430], requires_grad=True))\n",
+      "tensor([3.2269], requires_grad=True))\n",
       "\n"
      ]
     }
@@ -205,15 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([300.6250], grad_fn=<AddBackward0>)\n",
-      "tensor([30106792.], grad_fn=<AddBackward0>)\n"
+      "tensor([304.3310], grad_fn=<AddBackward0>)\n",
+      "tensor([30110418.], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
@@ -238,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -293,9 +285,7 @@
       "GPU available: True, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "/home/hyperplane/anaconda3/envs/pytorch_test/lib/python3.7/site-packages/pytorch_lightning/trainer/trainer.py:1817: PossibleUserWarning: GPU available but not used. Set `accelerator` and `devices` using `Trainer(accelerator='gpu', devices=8)`.\n",
-      "  category=PossibleUserWarning,\n"
+      "HPU available: False, using: 0 HPUs\n"
      ]
     }
    ],
@@ -314,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -336,24 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                                            "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hyperplane/anaconda3/envs/pytorch_test/lib/python3.7/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:245: PossibleUserWarning: The dataloader, val_dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 72 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  category=PossibleUserWarning,\n",
-      "/home/hyperplane/anaconda3/envs/pytorch_test/lib/python3.7/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:245: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 72 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  category=PossibleUserWarning,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 49: 100%|██████████| 200/200 [00:00<00:00, 259.73it/s, loss=0.00751, v_num=1] \n"
+      "Epoch 9: 100%|██████████| 200/200 [00:01<00:00, 126.80it/s, loss=0.000162, v_num=1]\n"
      ]
     }
    ],
