--- a/python/third-party-modules/sko/finetune.ipynb
+++ b/python/third-party-modules/sko/finetune.ipynb
@@ -52,7 +52,7 @@
     "    - 这次运行时认为“相关”的区间的上下界`low, high`\n",
     "    - 幂次`alpha`\n",
     "  - 只考查这一认为“相关”的区间，进行拟合\n",
-    "  - 除了该区间，其余部分直接平凡地使得$\\hat y = \\hat b x + \\hat a$成立显然是合理做法\n",
+    "  - 除了该区间，其余部分直接平凡地使得$\\bar y = \\hat b \\bar x + \\hat a$成立显然是合理做法\n",
     "  - 注意特判`inside`或`outside`无数据的情况"
    ]
   },
