--- a/latex/example-doc/algorithm.tex
+++ b/latex/example-doc/algorithm.tex
@@ -13,6 +13,8 @@
 \caption{Caption}\label{alg}
 \KwIn{$x^2$}
 \KwOut{$y^3$}
+sequence\;
+sequence\;
 \For(//comment){condition}{block}
 \ForEach{condition}{block}
 \If{condition}{block}
