--- a/algorithm/特判.md
+++ b/algorithm/特判.md
@@ -18,7 +18,10 @@ else if (former!="."){
     p.push_back(former);
 }
 ```
-注意：
-不能把`!p.empty()`提前到上一级的`if`里
-根据题意，并不是说根目录`..`就直接输出`/`，而是根目录`..`就不动，但之后还可能到下级目录！（这是unix操作的常识）
-最后还需特判是否为空（空串要手动加上`/`，其它情况末尾不能有`/`）
+- 注意
+  - 不能把`!p.empty()`提前到上一级的`if`里
+    - 根据题意，并不是说根目录`..`就直接输出`/`，而是根目录`..`就不动，但之后还可能到下级目录！（这是unix操作的常识）
+  - 最后还需特判是否为空
+    - 空串要手动加上`/`，其它情况末尾不能有`/`
+- 凡是涉及“配对”（pairwise）的，都要特别小心两者相同的情况
+  - 例如[[parallelism]]中torch综合应用“算法题”示例中减去`torch.eye(p)`
