finding alphas price volume

--- a/math-stat/3-hypothesis/拟合优度检验.md
+++ b/math-stat/3-hypothesis/拟合优度检验.md
@@ -21,7 +21,7 @@ $V = n(\frac{a^2 bc+a^2bd+a^2 cd+a^2d^2+...}{...}-1)$
 $=(16项减16项，看多的少的就行)n(\frac{a^2d^2+b^2c^2-2adbc}{...})=n(ad-bc)^2/(+)(+)(+)(+)$
 ## 柯氏(Kolmogorov)
 回忆[[分布函数估计]]中G-C定理，“误差”上界不应太大
-但是怎么由$\alpha$得否定域呢？分歧度$D$分布和$F$无关（这点类比[[序列统计量]]中连续的“好”分布和均匀分布的关系）！
+但是怎么由$\alpha$得否定域呢？分歧度$D$分布和$F$无关（这点类比[[order-statistics]]中连续的“好”分布和均匀分布的关系）！
 但$D$的分布和$n$有关。$n$小查表，大了则$\sqrt n D_n$分布近似是某个造好表的$Q$
 注意这里没有-1. -1的本质是[[chi-square]]那里由于正态分布被中心化，去除了一个自由度。这里和[[chi-square]]毫无关系，就是简单造个表，是$n$就是$n$
 实际工作近似方法：先极大似然！
@@ -31,7 +31,7 @@ $=(16项减16项，看多的少的就行)n(\frac{a^2d^2+b^2c^2-2adbc}{...})=n(ad
   - $F_{n_1}(x),G_{n_2}(x)$，$lim_{n_1,n_2}P(\sqrt{\frac{n_1n_2}{n_1+n_2}}D\le x)=Q(x)$
 ## 正态性
 - 样本量小，W检验
-  - 实质上是看$EX_{(i)}$和$X_{(i)}$（[[序列统计量]]）是否近似相等
+  - 实质上是看$EX_{(i)}$和$X_{(i)}$（[[order-statistics]]）是否近似相等
   - 或说$X_{(i)}$和标准正态的分位数是否成线性关系，用[[系数]]$R^2$判断。这相当于做了中心化标准化
 - 大，D检验
 - 不过很多都是会[[查表]]就行
