--- a/math-stat/3-hypothesis/非参数检验.md
+++ b/math-stat/3-hypothesis/非参数检验.md
@@ -4,7 +4,7 @@
 - 秩统计量
 说白了就是排序第几。根据独立同分布假设，显然可证明某种均匀性
 比如检测$F(x)$还是$F(x-c)$，你把两总体共$m+n$个样本放到一起，看那$n$个样本的秩和，[[查表]]得结果
-联系[[序列统计量]]，体会只和顺序有关，和具体值无关的思想
+联系[[order-statistics]]，体会只和顺序有关，和具体值无关的思想
 - 符号秩统计量
 绝对秩：绝对值排序。关于0对称的连续分布的总体，
 符号秩和：$\sum \phi(Z_i)R_i^+$，$\phi$是分段函数（小0大1），$R^+$是绝对秩。可用于[[查表]]检验是否关于0对称
