--- a/algorithm/特判.md
+++ b/algorithm/特判.md
@@ -25,3 +25,7 @@ else if (former!="."){
     - 空串要手动加上`/`，其它情况末尾不能有`/`
 - 凡是涉及“配对”（pairwise）的，都要特别小心两者相同的情况
   - 例如[[parallelism]]中torch综合应用“算法题”示例中减去`torch.eye(p)`
+- 考虑输入为空的情况
+  - 例如：`1`出现在二维数组`[[0,1],[1,2],[2,3]]`中的`0, 1`两个子数组，想输出`[0, 1]`
+  - 解决方案：`a = 1 == torch.tensor([[0,1],[1,2],[2,3]]); b = a.sum(axis=1)`
+  - 但：如果`1`不出现，就崩了
