--- a/math-stat/3-hypothesis/水平和功效.md
+++ b/math-stat/3-hypothesis/水平和功效.md
@@ -1,16 +1,33 @@
-错误地否定了（错杀）：第一类错误
-错误地肯定了：第二类错误
+- 对$H_0,H_1$两个假设
+  - 真实是$H_0$，错误地否定了（错杀）：第一类错误
+  - 真实是$H_1$，错误地肯定了（放过）：第二类错误
+  - 当然，对超出两个的情况（如参数$\theta$有很多种取值）则对不同的$\theta$可能有不同的错误概率
+    - 这些第一类错误概率如果被“一致”考察，就引出了“水平”概念（参见后文）
+    - 在指定水平下，第二类错误再被“一致”考察，就引出了[[UMP]]概念（参见后文）
+    - 所以[[UMP]]这个定义是“不对称”的
+  - 两个假设，一共有四个数值
+    - 参考[[2-eval]]的$TP, FP, TN, FN$
+    - 但这里的$H_0,H_1$两者间如果没有概率的说法，那么就只有两个概率可以实际计算，[[2-eval]]的“准确率”算不了，参考后文
 - 功效
-对于指定否定域$W$（或称检验法），其$\theta$下肯定的概率$L_W(\theta)$称为OC函数。**否定**的概率$1-L_W=\rho_W$称为功效函数
-功效的直观含义：检验法奏效，检出了**不合格**情况
-如果说检验是为了找否定，证明是为了找定理，那么功效类比数理逻辑的[[完全性]]
-可以尝试画草图，直观看……
+  - 对于指定否定域$W$（或称检验法），其$\theta$下肯定的概率$L_W(\theta)$称为OC函数
+  - **否定**的概率$1-L_W=\rho_W$称为功效函数
+  - 直观含义：检验法奏效，检出了**假设不成立**情况。第二类错误少
+  - 类比
+    - 功效为极端情况1时，对应数理逻辑的[[完全性]]（有定理，我就能找到，类比：假设错误，我就能否定）
+    - **“正例”对应“假设错误”**（下同），则直接类比[[2-eval]]的召回率recall（实际上是正例，我就能判定为真，类比：实际上假设错误，我就能否定）
 - 水平
-$sup_{\theta\in \Theta_0}\rho_W(\theta)$：第一类错误概率的上界
-称为检验水平（显著性水平）。直观理解：如果检验出来了，那可不是随口一说。如果你本不该被否定的，那么被这样检出的概率可小了
-类比数理逻辑的[[可靠性]]
-- 由此定义优良标准[[UMP]]
-- 问题：$H_0$和$H_1$倒过来，结论不同，怎么办？你$H_0$是取“小于等于某某”还是“大于等于某某”？
-  - 原因：第一类错误我们严格控制，但功效我们只能尽可能希望大，没法严格控制，参考[[UMP]]
-  - 所以：我们谨慎否定（没有特别强证据，不否定）
-  - 考试时认为哪种都行
+  - $sup_{\theta\in \Theta_0}\rho_W(\theta)$：第一类错误概率的上界，称为检验水平（显著性水平）。
+  - 直观理解：如果检验出来不符合假设了，那可不是随口一说。如果你本不该被否定的，那么被这样检出的概率可小了
+  - 类比
+    - 水平为极端情况0时，对应数理逻辑的[[可靠性]]（我说是定理，就是定理，类比：我说假设错误，就是假设错误）
+    - 无法直接类比[[2-eval]]的precision
+      - 因为我们现在是[[math-stat/1-introduction]]中的频率学派，无法计算“否定假设时，确实应该被否定的概率”
+      - 拓展：[[区间估计的误区]]
+    - 极端情况：水平为0，所有实际上满足$H_0$的都不会被否定，相当于所有的负例都不会被判正，这时准确率precision为100%
+- 两者之间有[[tradeoff]]
+  - 由两者，定义优良标准[[UMP]]
+- 第一类错误我们严格控制，但功效我们只能尽可能希望大，没法严格控制，参考[[UMP]]
+  - 两侧地位不对称！所以$H_0$和$H_1$地位倒过来，结论可能不同
+  - 那怎么办？你$H_0$是取$\theta\le c$还是$\theta>c$？根据实际情况决定
+  - 做假设时就带有倾向性
+  - 我们谨慎否定！（没有特别强证据，不否定）
