--- a/pytorch/lightning/example.ipynb
+++ b/pytorch/lightning/example.ipynb
@@ -331,13 +331,16 @@
     }
    ],
    "source": [
-    "trainer.fit(model, train_dataloader, train_dataloader)"
+    "trainer.fit(model, train_dataloader, train_dataloader)\n",
+    "model.eval()\n",
+    "inputs = Tensor([[i, 2*i] for i in range(4)])\n",
+    "print(model(inputs))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('pytorch_test')",
+   "display_name": "Python 3.7.5 64-bit ('b1f3c244e_d4ec2478')",
    "language": "python",
    "name": "python3"
   },
@@ -351,12 +354,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8322031f39af98cbe19368adda130b1174bb974b969346194f4b1af6a9fd7a2b"
+    "hash": "826d1dfb4f7095054fa1e8aa5c9f75611dff00fcf4380367d6d7b872b613014f"
    }
   }
  },
