--- a/algorithm/leetcode-solutions/18-4sum.md
+++ b/algorithm/leetcode-solutions/18-4sum.md
@@ -46,7 +46,7 @@ public:
 ```
 - 要点
   - 核心算法是[[sort]]后[[双指针]]，减少一层循环，变为$O(n^3)$
-  - [[two-sum]]可作为这里的有用的子模块
+  - [[1-two-sum]]可作为这里的有用的子模块
   - 去重：参考[[algorithm/trivial-mistakes]]
     - 两层循环：`j`从`i+1`开始而非`i`
     - [[loop]]中提到的“去重循环”，4行一组snippet
