--- a/algorithm/双指针.md
+++ b/algorithm/双指针.md
@@ -1,4 +1,9 @@
-- https://leetcode.cn/problems/container-with-most-water/
-双指针包括了“可能”范围。过程中不断去除不可能的组合（移动一次指针，实际上是除去了一组以某个为边的组合）
+- [[11-container-with-most-water]]
+    - 双指针之间包括了“可能”范围
+    - 过程中不断去除不可能的组合
+      - 移动一次指针，实际上是除去了一组以某个为边的组合
+      - 例如移动左指针（脚标位置）从1到2，右指针处于5，那就是`(1, 4), (1, 3), (1, 2)`这些组合都不可能成立，不用考虑了
 - https://leetcode.cn/problems/3sum-closest/
-同样的道理，移动一次指针，实际上是除去了一组以某个为边的组合
+    - 同样的道理，移动一次指针，实际上是除去了一组以某个为边的组合
+- 注意
+  - `while(lo<hi)`，不要写`!=`，比较保险！
