--- a/general-principles/化归.md
+++ b/general-principles/化归.md
@@ -1,5 +1,5 @@
-- 和[[oi-wiki/recursion]]含义区别
-  - [[oi-wiki/recursion]]是问题本质不变，规模改变（往往变小）
+- 和[[oi-wiki-basic/recursion]]含义区别
+  - [[oi-wiki-basic/recursion]]是问题本质不变，规模改变（往往变小）
   - 化归是本质变简单，规模不一定变小
 - 局部增大规模/增加额外操作，但总体“统一化”，更简单，是化归手段！
   - 比如[[multi-ary]]一来讲到把$Wx+b$的$b$形式上写成$b \cdot x_0\equiv b\cdot 1$
