--- a/algorithm/leetcode-solutions/18-4sum.md
+++ b/algorithm/leetcode-solutions/18-4sum.md
@@ -45,7 +45,7 @@ public:
 };
 ```
 - 要点
-  - 核心算法是[[sort]]后[[双指针]]，减少一层循环，变为$O(n^3)$
+  - 核心算法是[[sort]]后[[two-pointers]]，减少一层循环，变为$O(n^3)$
   - [[1-two-sum]]可作为这里的有用的子模块
   - 去重：参考[[algorithm/trivial-mistakes]]
     - 两层循环：`j`从`i+1`开始而非`i`
